--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "nodemon": "^3.1.9",
     "prisma": "^6.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
   }
 }
