--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "jira-todo-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "start": "node ./dist/server.js",
-    "dev": " ts-node-dev --respawn --transpile-only src/server.ts"
+    "start": "node dist/index.js",
+    "dev": " ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "",
