--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules
 # Keep environment variables out of version control
-dist
+# Ensure `dist/` is not ignored during deployment
+!/dist
 
 .env
